--- a/review-tickets.html
+++ b/review-tickets.html
@@ -106,21 +106,10 @@
 													</div>
 													<div class="v-footer">
 														<div class="v-base-footer">
-															<div
-																class="v-buttons-container d-flex flex-column align-items-center column-gap-3 text-center justify-content-evenly mt-3 mb-3">
-																<button type="button" class="text-capitalize v-bar-code">
-																	<span class="v-icon">
-																		<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-																			<rect width="24" height="24" fill="none" />
-																			<path
-																				fill="currentColor"
-																				d="M15 21h-2v-2h2zm-2-7h-2v5h2zm8-2h-2v4h2zm-2-2h-2v2h2zM7 12H5v2h2zm-2-2H3v2h2zm7-5h2V3h-2zm-7.5-.5v3h3v-3zM9 9H3V3h6zm-4.5 7.5v3h3v-3zM9 21H3v-6h6zm7.5-16.5v3h3v-3zM21 9h-6V3h6zm-2 10v-3h-4v2h2v3h4v-2zm-2-7h-4v2h4zm-4-2H7v2h2v2h2v-2h2zm1-1V7h-2V5h-2v4zM6.75 5.25h-1.5v1.5h1.5zm0 12h-1.5v1.5h1.5zm12-12h-1.5v1.5h1.5z" />
-																		</svg>
-																	</span>
-																	<b>View Bardcode</b>
-																</button>
+															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
+																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<b>Ticket details</b>
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
@@ -201,21 +190,10 @@
 													</div>
 													<div class="v-footer">
 														<div class="v-base-footer">
-															<div
-																class="v-buttons-container d-flex flex-column align-items-center column-gap-3 text-center justify-content-evenly mt-3 mb-3">
-																<button type="button" class="text-capitalize v-bar-code">
-																	<span class="v-icon">
-																		<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-																			<rect width="24" height="24" fill="none" />
-																			<path
-																				fill="currentColor"
-																				d="M15 21h-2v-2h2zm-2-7h-2v5h2zm8-2h-2v4h2zm-2-2h-2v2h2zM7 12H5v2h2zm-2-2H3v2h2zm7-5h2V3h-2zm-7.5-.5v3h3v-3zM9 9H3V3h6zm-4.5 7.5v3h3v-3zM9 21H3v-6h6zm7.5-16.5v3h3v-3zM21 9h-6V3h6zm-2 10v-3h-4v2h2v3h4v-2zm-2-7h-4v2h4zm-4-2H7v2h2v2h2v-2h2zm1-1V7h-2V5h-2v4zM6.75 5.25h-1.5v1.5h1.5zm0 12h-1.5v1.5h1.5zm12-12h-1.5v1.5h1.5z" />
-																		</svg>
-																	</span>
-																	<b>View Bardcode</b>
-																</button>
+															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
+																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<b>Ticket details</b>
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
@@ -296,21 +274,10 @@
 													</div>
 													<div class="v-footer">
 														<div class="v-base-footer">
-															<div
-																class="v-buttons-container d-flex flex-column align-items-center column-gap-3 text-center justify-content-evenly mt-3 mb-3">
-																<button type="button" class="text-capitalize v-bar-code">
-																	<span class="v-icon">
-																		<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-																			<rect width="24" height="24" fill="none" />
-																			<path
-																				fill="currentColor"
-																				d="M15 21h-2v-2h2zm-2-7h-2v5h2zm8-2h-2v4h2zm-2-2h-2v2h2zM7 12H5v2h2zm-2-2H3v2h2zm7-5h2V3h-2zm-7.5-.5v3h3v-3zM9 9H3V3h6zm-4.5 7.5v3h3v-3zM9 21H3v-6h6zm7.5-16.5v3h3v-3zM21 9h-6V3h6zm-2 10v-3h-4v2h2v3h4v-2zm-2-7h-4v2h4zm-4-2H7v2h2v2h2v-2h2zm1-1V7h-2V5h-2v4zM6.75 5.25h-1.5v1.5h1.5zm0 12h-1.5v1.5h1.5zm12-12h-1.5v1.5h1.5z" />
-																		</svg>
-																	</span>
-																	<b>View Bardcode</b>
-																</button>
+															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
+																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<b>Ticket details</b>
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
@@ -391,21 +358,10 @@
 													</div>
 													<div class="v-footer">
 														<div class="v-base-footer">
-															<div
-																class="v-buttons-container d-flex flex-column align-items-center column-gap-3 text-center justify-content-evenly mt-3 mb-3">
-																<button type="button" class="text-capitalize v-bar-code">
-																	<span class="v-icon">
-																		<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-																			<rect width="24" height="24" fill="none" />
-																			<path
-																				fill="currentColor"
-																				d="M15 21h-2v-2h2zm-2-7h-2v5h2zm8-2h-2v4h2zm-2-2h-2v2h2zM7 12H5v2h2zm-2-2H3v2h2zm7-5h2V3h-2zm-7.5-.5v3h3v-3zM9 9H3V3h6zm-4.5 7.5v3h3v-3zM9 21H3v-6h6zm7.5-16.5v3h3v-3zM21 9h-6V3h6zm-2 10v-3h-4v2h2v3h4v-2zm-2-7h-4v2h4zm-4-2H7v2h2v2h2v-2h2zm1-1V7h-2V5h-2v4zM6.75 5.25h-1.5v1.5h1.5zm0 12h-1.5v1.5h1.5zm12-12h-1.5v1.5h1.5z" />
-																		</svg>
-																	</span>
-																	<b>View Bardcode</b>
-																</button>
+															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
+																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<b>Ticket details</b>
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
@@ -486,21 +442,10 @@
 													</div>
 													<div class="v-footer">
 														<div class="v-base-footer">
-															<div
-																class="v-buttons-container d-flex flex-column align-items-center column-gap-3 text-center justify-content-evenly mt-3 mb-3">
-																<button type="button" class="text-capitalize v-bar-code">
-																	<span class="v-icon">
-																		<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
-																			<rect width="24" height="24" fill="none" />
-																			<path
-																				fill="currentColor"
-																				d="M15 21h-2v-2h2zm-2-7h-2v5h2zm8-2h-2v4h2zm-2-2h-2v2h2zM7 12H5v2h2zm-2-2H3v2h2zm7-5h2V3h-2zm-7.5-.5v3h3v-3zM9 9H3V3h6zm-4.5 7.5v3h3v-3zM9 21H3v-6h6zm7.5-16.5v3h3v-3zM21 9h-6V3h6zm-2 10v-3h-4v2h2v3h4v-2zm-2-7h-4v2h4zm-4-2H7v2h2v2h2v-2h2zm1-1V7h-2V5h-2v4zM6.75 5.25h-1.5v1.5h1.5zm0 12h-1.5v1.5h1.5zm12-12h-1.5v1.5h1.5z" />
-																		</svg>
-																	</span>
-																	<b>View Bardcode</b>
-																</button>
+															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
+																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<b>Ticket details</b>
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
@@ -577,17 +522,17 @@
 				<!-- modal @::end -->
 				<!-- offcanvas @::start -->
 				<div
-					class="offcanvas offcanvas-end"
+					class="offcanvas offcanvas-bottom"
 					data-bs-backdrop="static"
 					tabindex="-1"
 					id="TransferTicketSelection"
 					aria-labelledby="TransferTicketSelectionLabel">
 					<div class="offcanvas-header">
-						<h5 class="offcanvas-title" id="TransferTicketSelectionLabel">Select Ticket(s)</h5>
+						<h5 class="offcanvas-title text-uppercase fs-6 mx-auto fw-semibold" id="TransferTicketSelectionLabel">Select Ticket to Transfer</h5>
 						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 					</div>
 					<div class="offcanvas-body">
-						<div class="v-caution-banner">
+						<div class="v-caution-banner align-items-start align-items-md-center">
 							<span class="v-icon">
 								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
 									<rect width="24" height="24" fill="none" />
@@ -645,62 +590,176 @@
 					</div>
 					<div class="offcanvas-footer mt-auto">
 						<span class="v-amt-selected">1 Selected</span>
-						<button type="button" class="v-offcanvas-footer-action v-carry-on" data-bs-target="#TransferTicket" data-bs-toggle="offcanvas">
-							Transfer to
-						</button>
-					</div>
-				</div>
-
-				<div class="offcanvas offcanvas-end" data-bs-backdrop="static" tabindex="-1" id="TransferTicket" aria-labelledby="TransferTicketLabel">
-					<div class="offcanvas-header justify-content-between">
-						<button type="button" class="v-offcanvas-back" data-bs-toggle="offcanvas" data-bs-target="#TransferTicketSelection">
+						<button type="button" class="v-offcanvas-footer-action v-carry-on" data-bs-target="#transferTo" data-bs-toggle="offcanvas">
+							<span class="v-text"> Transfer to </span>
 							<span class="v-icon">
 								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
 									<rect width="24" height="24" fill="none" />
 									<path
-										fill="none"
-										stroke="currentColor"
-										stroke-linecap="round"
-										stroke-linejoin="round"
-										stroke-width="2"
-										d="M20 12H4m0 0l6-6m-6 6l6 6" />
+										fill="currentColor"
+										d="M9.29 6.71a.996.996 0 0 0 0 1.41L13.17 12l-3.88 3.88a.996.996 0 1 0 1.41 1.41l4.59-4.59a.996.996 0 0 0 0-1.41L10.7 6.7c-.38-.38-1.02-.38-1.41.01" />
 								</svg>
 							</span>
 						</button>
-						<h5 class="offcanvas-title fs-5 fw-semibold" id="TransferTicketLabel">Transfer Ticket</h5>
-						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+					</div>
+				</div>
+
+				<div class="offcanvas offcanvas-bottom" data-bs-backdrop="static" tabindex="-1" id="TransferTicket" aria-labelledby="TransferTicketLabel">
+					<div class="offcanvas-header justify-content-center border-bottom border">
+						<h5 class="offcanvas-title fs-6 fw-semibold text-uppercase" id="TransferTicketLabel">Transfer Ticket</h5>
+					</div>
+					<div class="offcanvas-body pb-5">
+						<div class="col-lg-7 col-xl-5 mx-auto">
+							<header>
+								<span class="fw-semibold">2 Tickets Selected</span>
+								<div class="d-flex align-items-center flex-wrap column-gap-2">
+									<span>Sec <b>A4</b></span>
+									<span>Sec <b>5</b></span>
+									<span>Seat - <b> 3</b></span>
+									<span>Seat - <b> 4</b></span>
+								</div>
+							</header>
+							<section class="mt-4">
+								<div class="">
+									<form action="" class="d-flex flex-column row-gap-2">
+										<div class="v-form-input">
+											<label for="firstName" class="v-form-label">First Name</label>
+											<input type="text" class="form-control" placeholder="Enter beneficiary's first name" />
+										</div>
+										<div class="v-form-input">
+											<label for="firstName" class="v-form-label">Last Name</label>
+											<input type="text" class="form-control" placeholder="Enter beneficiary's last name" />
+										</div>
+										<div class="v-form-input">
+											<label for="firstName" class="v-form-label">Email or Phone No.</label>
+											<input type="text" class="form-control" placeholder="Enter beneficiary's contact address" />
+										</div>
+										<div class="v-form-input">
+											<label for="firstName" class="v-form-label">Note</label>
+											<textarea name="" rows="4" class="form-control" placeholder="Enter a note for beneficiary"></textarea>
+										</div>
+									</form>
+								</div>
+							</section>
+						</div>
+					</div>
+					<div class="offcanvas-footer mt-auto d-flex justify-content-between column-gap-4">
+						<button
+							type="button"
+							class="v-offcanvas-footer-action text-uppercase d-flex align-items-center"
+							style="color: var(--primary-clr)"
+							data-bs-toggle="offcanvas"
+							data-bs-target="#transferTo">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+									<rect width="24" height="24" fill="none" />
+									<path
+										fill="currentColor"
+										d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41" />
+								</svg>
+							</span>
+							<small class="v-text"> Back </small>
+						</button>
+						<button
+							type="button"
+							class="v-offcanvas-footer-action py-2 px-3 text-uppercase d-flex align-items-center text-white"
+							style="background-color: var(--primary-clr)">
+							<small class="v-text"> Transfer 2 Tickets </small>
+						</button>
+					</div>
+				</div>
+
+				<div class="offcanvas offcanvas-bottom" data-bs-backdrop="static" tabindex="-1" id="transferTo" aria-labelledby="TransferTicketLabel">
+					<div class="offcanvas-header border border-bottom justify-content-center">
+						<h5 class="offcanvas-title fs-6 fw-semibold text-uppercase" id="TransferTicketLabel">Transfer To</h5>
 					</div>
 					<div class="offcanvas-body">
-						<header>
-							<h5 class="v-title">Enter Beneficiary Details</h5>
-							<span class="opacity-75"> Or select from <button type="button" style="color: var(--primary-clr)">contact</button> </span>
-						</header>
-						<section class="mt-4">
-							<div class="v-main-tickets-display">
-								<form action="" class="d-flex flex-column row-gap-2">
-									<div class="v-form-input">
-										<label for="firstName" class="v-form-label">First Name</label>
-										<input type="text" class="form-control" placeholder="Enter beneficiary's first name" />
-									</div>
-									<div class="v-form-input">
-										<label for="firstName" class="v-form-label">Last Name</label>
-										<input type="text" class="form-control" placeholder="Enter beneficiary's last name" />
-									</div>
-									<div class="v-form-input">
-										<label for="firstName" class="v-form-label">Email or Phone No.</label>
-										<input type="text" class="form-control" placeholder="Enter beneficiary's contact address" />
-									</div>
-									<div class="v-form-input">
-										<label for="firstName" class="v-form-label">Note</label>
-										<textarea name="" rows="4" class="form-control" placeholder="Enter a note for beneficiary"></textarea>
-									</div>
-								</form>
+						<div class="col-lg-7 col-xl-5 mx-auto">
+							<div class="v-what-to-do">
+								<button type="button" class="d-flex align-items-center justify-content-center column-gap-3 w-100">
+									<span class="v-text">Select From Contacts</span>
+									<span class="v-icon">
+										<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+											<rect width="24" height="24" fill="none" />
+											<g fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" color="currentColor">
+												<rect width="17.5" height="20" x="4" y="2" rx="4" />
+												<path
+													d="M10.59 13.74c-.629.422-2.277 1.282-1.273 2.358c.49.526 1.037.902 1.723.902h3.92c.686 0 1.233-.376 1.723-.902c1.004-1.076-.644-1.936-1.273-2.357a4.29 4.29 0 0 0-4.82 0M15 9a2 2 0 1 1-4 0a2 2 0 0 1 4 0M5 6H2.5M5 12H2.5M5 18H2.5" />
+											</g>
+										</svg>
+									</span>
+								</button>
+								<button
+									type="button"
+									data-bs-toggle="offcanvas"
+									data-bs-target="#TransferTicket"
+									class="d-flex align-items-center justify-content-center column-gap-3 w-100">
+									<span class="v-text">Manually Enter A Recipient</span>
+									<span class="v-icon">
+										<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+											<rect width="24" height="24" fill="none" />
+											<g fill="currentColor" fill-rule="evenodd" clip-rule="evenodd">
+												<path d="M2 12C2 6.477 6.477 2 12 2s10 4.477 10 10s-4.477 10-10 10S2 17.523 2 12m10-8a8 8 0 1 0 0 16a8 8 0 0 0 0-16" />
+												<path d="M13 7a1 1 0 1 0-2 0v4H7a1 1 0 1 0 0 2h4v4a1 1 0 1 0 2 0v-4h4a1 1 0 1 0 0-2h-4z" />
+											</g>
+										</svg>
+									</span>
+								</button>
 							</div>
-						</section>
+							<div class="v-way-to-transfer d-flex flex-column align-items-center text-center mt-4">
+								<span class="v-icon v-tele">
+									<svg style="--size: 2rem" viewBox="0 0 256 256" xmlns="http://www.w3.org/2000/svg">
+										<rect fill="none" height="256" width="256" />
+										<path
+											d="M88,134.9,177.9,214a8,8,0,0,0,13.1-4.2L228.6,45.6a8,8,0,0,0-10.7-9.2L33.3,108.9c-7.4,2.9-6.4,13.7,1.4,15.3Z"
+											fill="none"
+											stroke="#000"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="16" />
+										<line
+											fill="none"
+											stroke="currentColor"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="16"
+											x1="88"
+											x2="224.1"
+											y1="134.9"
+											y2="36.6" />
+										<path
+											d="M132.9,174.4l-31.2,31.2A8,8,0,0,1,88,200V134.9"
+											fill="none"
+											stroke="#000"
+											stroke-linecap="round"
+											stroke-linejoin="round"
+											stroke-width="16" />
+									</svg>
+								</span>
+								<div class="v-content">
+									<span class="v-main-text"> Transfer Tickets Via Email or Text Message </span>
+									<span class="v-subtext"> Select an Email or mobile number to transfer tickets to your recipients </span>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="offcanvas-footer mt-auto">
-						<button type="button" class="v-offcanvas-footer-action v-carry-on">Transfer to</button>
-						<button type="button" class="v-offcanvas-footer-action v-cancel" data-bs-dismiss="offcanvas">Cancel</button>
+					<div class="offcanvas-footer mt-auto d-flex column-gap-4">
+						<button
+							type="button"
+							class="v-offcanvas-footer-action v-carry-on text-uppercase d-flex align-items-center"
+							style="color: var(--primary-clr)"
+							data-bs-toggle="offcanvas"
+							data-bs-target="#TransferTicketSelection">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+									<rect width="24" height="24" fill="none" />
+									<path
+										fill="currentColor"
+										d="M14.71 6.71a.996.996 0 0 0-1.41 0L8.71 11.3a.996.996 0 0 0 0 1.41l4.59 4.59a.996.996 0 1 0 1.41-1.41L10.83 12l3.88-3.88c.39-.39.38-1.03 0-1.41" />
+								</svg>
+							</span>
+							<span class="v-text"> Back </span>
+						</button>
 					</div>
 				</div>
 				<!-- offcanvas @::end -->
