--- a/create-ticket.html
+++ b/create-ticket.html
@@ -70,7 +70,7 @@
 									</div>
 								</div>
 								<div class="v-action-container mt-3">
-									<button class="v-action" type="button">Create or Buy</button>
+									<a href="./review-tickets.html" class="v-action">Create or Buy</a>
 								</div>
 							</form>
 						</div>
