--- a/review-tickets.html
+++ b/review-tickets.html
@@ -464,6 +464,20 @@
 								<button type="button" class="v-action" data-bs-toggle="offcanvas" data-bs-target="#TransferTicketSelection">Transfer</button>
 								<button type="button" class="v-action" disabled>Sell</button>
 							</div>
+
+							<div class="mt-5">
+								<div class="v-map">
+									<iframe
+										src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.4631091547!2d3.1191444810498465!3d6.548369368072236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1725726831823!5m2!1sen!2sng"
+										width="100%"
+										height="450"
+										class="rounded-2"
+										style="border: 0"
+										allowfullscreen=""
+										loading="lazy"
+										referrerpolicy="no-referrer-when-downgrade"></iframe>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
