--- a/review-tickets.html
+++ b/review-tickets.html
@@ -18,10 +18,11 @@
 					<span class="v-icon text-white" style="fill: var(--white)">
 						<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
 							<rect width="24" height="24" fill="none" />
-							<path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m15 18l-6-6l6-6" />
+							<path
+								fill="currentColor"
+								d="M18.3 5.71a.996.996 0 0 0-1.41 0L12 10.59L7.11 5.7A.996.996 0 1 0 5.7 7.11L10.59 12L5.7 16.89a.996.996 0 1 0 1.41 1.41L12 13.41l4.89 4.89a.996.996 0 1 0 1.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4" />
 						</svg>
 					</span>
-					<span class="v-text d-none d-md-inline"> Go Back </span>
 				</button>
 				<h6 class="v-head-title text-white mx-auto fw-semibold">My Tickets</h6>
 			</div>
@@ -29,12 +30,9 @@
 				<div class="container-xl">
 					<div class="row col-12 m-0 justify-content-center align-items-stretch">
 						<div class="col-md-7 col-lg-6 my-4 p-0">
-							<header class="v-pre-form-header mb-4">
-								<h5 class="v-title fw-semibold">Tickets</h5>
-							</header>
 							<div>
 								<section class="splide" aria-label="Splide Basic HTML Example">
-									<div class="splide__track">
+									<div class="splide__track v-902u202dnb3">
 										<ul class="splide__list">
 											<!-- v-each-slide @::start -->
 											<li class="splide__slide">
@@ -108,7 +106,7 @@
 														<div class="v-base-footer">
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
-																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
+																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
 																	Ticket details
 																</button>
 															</div>
@@ -192,7 +190,7 @@
 														<div class="v-base-footer">
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
-																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
+																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
 																	Ticket details
 																</button>
 															</div>
@@ -276,7 +274,7 @@
 														<div class="v-base-footer">
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
-																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
+																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
 																	Ticket details
 																</button>
 															</div>
@@ -360,7 +358,7 @@
 														<div class="v-base-footer">
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
-																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
+																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
 																	Ticket details
 																</button>
 															</div>
@@ -444,7 +442,7 @@
 														<div class="v-base-footer">
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
-																<button type="button" data-bs-toggle="modal" data-bs-target="#ticketDetails" class="text-capitalize">
+																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
 																	Ticket details
 																</button>
 															</div>
@@ -466,75 +464,68 @@
 							</div>
 
 							<div class="mt-5">
-								<div class="v-map">
-									<iframe
-										src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d253682.4631091547!2d3.1191444810498465!3d6.548369368072236!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b8b2ae68280c1%3A0xdc9e87a367c3d9cb!2sLagos!5e0!3m2!1sen!2sng!4v1725726831823!5m2!1sen!2sng"
-										width="100%"
-										height="450"
-										class="rounded-2"
-										style="border: 0"
-										allowfullscreen=""
-										loading="lazy"
-										referrerpolicy="no-referrer-when-downgrade"></iframe>
-								</div>
+								<div class="v-map"></div>
+								<iframe
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.733014275171!2d-118.28299212314708!3d34.0140737387614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c808e06dbb59%3A0xc8caaad992248bdc!2sBMO%20Stadium!5e0!3m2!1sen!2sng!4v1727229463062!5m2!1sen!2sng"
+									width="100%"
+									height="450"
+									style="border: 0"
+									allowfullscreen=""
+									class="rounded-2"
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"></iframe>
 							</div>
 						</div>
 					</div>
 				</div>
 
-				<!-- modal @::start -->
-				<div class="modal fade" id="ticketDetails" tabindex="-1" aria-labelledby="ticketDetailsLabel" aria-hidden="true">
-					<div class="modal-dialog modal-dialog-centered">
-						<div class="modal-content">
-							<div class="modal-header border-0">
-								<h1 class="modal-title fs-5" id="ticketDetailsLabel">Ticket Details</h1>
-								<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-							</div>
-							<div class="modal-body">
-								<ul class="v-listed-item">
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Seat</b>
-										<span class="v-item-value">A5/5/2</span>
-									</li>
-									<!-- each item @::end -->
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Entry Info</b>
-										<span class="v-item-value">Section A4</span>
-									</li>
-									<!-- each item @::end -->
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Ticket Info</b>
-										<span class="v-item-value">Section A4</span>
-									</li>
-									<!-- each item @::end -->
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Barcode Number</b>
-										<span class="v-item-value">Section A4</span>
-									</li>
-									<!-- each item @::end -->
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Order Number</b>
-										<span class="v-item-value">Section A4</span>
-									</li>
-									<!-- each item @::end -->
-									<!-- each item @::start -->
-									<li class="v-each-item">
-										<b class="v-item-title">Ticket Type</b>
-										<span class="v-item-value">Section A4</span>
-									</li>
-									<!-- each item @::end -->
-								</ul>
-							</div>
-						</div>
+				<!-- offcanvas @::start -->
+				<div class="offcanvas offcanvas-bottom h-100" data-bs-backdrop="static" tabindex="-1" id="ticketDetails" aria-labelledby="ticketDetailsLabel">
+					<div class="offcanvas-header">
+						<h5 class="offcanvas-title fs-6 fw-semibold" id="ticketDetailsLabel">Ticket Details</h5>
+						<button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+					</div>
+					<div class="offcanvas-body">
+						<ul class="v-listed-item">
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Seat</b>
+								<span class="v-item-value">A5/5/2</span>
+							</li>
+							<!-- each item @::end -->
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Entry Info</b>
+								<span class="v-item-value">Section A4</span>
+							</li>
+							<!-- each item @::end -->
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Ticket Info</b>
+								<span class="v-item-value">Section A4</span>
+							</li>
+							<!-- each item @::end -->
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Barcode Number</b>
+								<span class="v-item-value">Section A4</span>
+							</li>
+							<!-- each item @::end -->
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Order Number</b>
+								<span class="v-item-value">Section A4</span>
+							</li>
+							<!-- each item @::end -->
+							<!-- each item @::start -->
+							<li class="v-each-item">
+								<b class="v-item-title">Ticket Type</b>
+								<span class="v-item-value">Section A4</span>
+							</li>
+							<!-- each item @::end -->
+						</ul>
 					</div>
 				</div>
-				<!-- modal @::end -->
-				<!-- offcanvas @::start -->
 				<div
 					class="offcanvas offcanvas-bottom"
 					data-bs-backdrop="static"
