--- a/index.html
+++ b/index.html
@@ -177,5 +177,100 @@
 				</div>
 			</div>
 		</div>
+		<footer class="v-footer">
+			<div class="v-footer-inner">
+				<ul class="v-list-footer-links justify-content-between justify-content-sm-evenly column-gap-2 column-gap-sm-4">
+					<li>
+						<a href="" class="v-footer-link">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+									<rect width="24" height="24" fill="none" />
+									<g fill="none">
+										<path d="M0 0h24v24H0z" opacity="0.5" />
+										<path
+											fill="currentColor"
+											d="M10.5 2a8.5 8.5 0 0 1 6.676 13.762l3.652 3.652a1 1 0 0 1-1.414 1.414l-3.652-3.652A8.5 8.5 0 1 1 10.5 2m0 2a6.5 6.5 0 1 0 0 13a6.5 6.5 0 0 0 0-13m0 1a5.5 5.5 0 1 1 0 11a5.5 5.5 0 0 1 0-11" />
+									</g>
+								</svg>
+							</span>
+							<span class="v-text">Discover</span>
+						</a>
+					</li>
+					<li>
+						<a href="" class="v-footer-link">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24">
+									<rect width="24" height="24" fill="none" />
+									<path
+										fill="currentColor"
+										fill-rule="evenodd"
+										d="M2 9.137c0 4.405 3.298 6.946 6.106 9.11q.44.337.856.664C10 19.729 11 20.5 12 20.5v-15C7.5.826 2 4.275 2 9.138"
+										clip-rule="evenodd"
+										opacity="0.5" />
+									<path
+										fill="currentColor"
+										d="m14 7.5l-2-2v15c1 0 2-.77 3.038-1.59q.417-.326.856-.663C18.702 16.083 22 13.542 22 9.137c0-4.462-4.631-7.734-8.871-4.63l1.931 1.931A.75.75 0 0 1 14 7.5" />
+								</svg>
+							</span>
+							<span class="v-text">For You</span>
+						</a>
+					</li>
+					<li>
+						<a href="" class="v-footer-link">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 14 14">
+									<rect width="14" height="14" fill="none" />
+									<path
+										fill="currentColor"
+										fill-rule="evenodd"
+										d="M.947 1.743c.264-.109.561.035.748.251a1.4 1.4 0 0 0 .489.363a1.406 1.406 0 0 0 1.975-1.4c-.022-.274.075-.574.325-.691l.41-.193a.95.95 0 0 1 1.236.5l.484 1.118l-.052.113l-.001.002l-3.19 7.367l-.346.787L.069 3.12a.95.95 0 0 1 .458-1.204zm11.322 2.004c.185-.218.483-.361.747-.253l.443.183a.973.973 0 0 1 .47 1.235l-3.672 8.5a.973.973 0 0 1-1.269.513L4.55 12.034a.973.973 0 0 1-.514-1.268l.481-1.093L7.71 2.3a.973.973 0 0 1 1.268-.514l.434.203c.25.117.347.417.322.692a1.45 1.45 0 0 0 .409 1.143a1.444 1.444 0 0 0 2.127-.077Z"
+										clip-rule="evenodd" />
+								</svg>
+							</span>
+							<span class="v-text">My Events</span>
+						</a>
+					</li>
+					<li>
+						<a href="" class="v-footer-link">
+							<span class="v-icon">
+								<svg xmlns="http://www.w3.org/2000/svg" width="1.25em" height="1em" viewBox="0 0 640 512">
+									<rect width="640" height="512" fill="none" />
+									<path
+										fill="currentColor"
+										d="M621.16 54.46C582.37 38.19 543.55 32 504.75 32c-123.17-.01-246.33 62.34-369.5 62.34c-30.89 0-61.76-3.92-92.65-13.72c-3.47-1.1-6.95-1.62-10.35-1.62C15.04 79 0 92.32 0 110.81v317.26c0 12.63 7.23 24.6 18.84 29.46C57.63 473.81 96.45 480 135.25 480c123.17 0 246.34-62.35 369.51-62.35c30.89 0 61.76 3.92 92.65 13.72c3.47 1.1 6.95 1.62 10.35 1.62c17.21 0 32.25-13.32 32.25-31.81V83.93c-.01-12.64-7.24-24.6-18.85-29.47M48 132.22c20.12 5.04 41.12 7.57 62.72 8.93C104.84 170.54 79 192.69 48 192.69zm0 285v-47.78c34.37 0 62.18 27.27 63.71 61.4c-22.53-1.81-43.59-6.31-63.71-13.62M320 352c-44.19 0-80-42.99-80-96c0-53.02 35.82-96 80-96s80 42.98 80 96c0 53.03-35.83 96-80 96m272 27.78c-17.52-4.39-35.71-6.85-54.32-8.44c5.87-26.08 27.5-45.88 54.32-49.28zm0-236.11c-30.89-3.91-54.86-29.7-55.81-61.55c19.54 2.17 38.09 6.23 55.81 12.66z" />
+								</svg>
+							</span>
+							<span class="v-text">Sell</span>
+						</a>
+					</li>
+					<li>
+						<a href="" class="v-footer-link">
+							<span class="v-icon">
+								<svg
+									version="1.1"
+									viewBox="0 0 20 20"
+									xmlns="http://www.w3.org/2000/svg"
+									xmlns:sketch="http://www.bohemiancoding.com/sketch/ns"
+									xmlns:xlink="http://www.w3.org/1999/xlink">
+									<title />
+									<desc />
+									<defs />
+									<g fill="none" fill-rule="evenodd" id="Page-1" stroke="none" stroke-width="1">
+										<g fill="currentColor" id="Core" transform="translate(-86.000000, -2.000000)">
+											<g id="account-circle" transform="translate(86.000000, 2.000000)">
+												<path
+													d="M10,0 C4.5,0 0,4.5 0,10 C0,15.5 4.5,20 10,20 C15.5,20 20,15.5 20,10 C20,4.5 15.5,0 10,0 L10,0 Z M10,3 C11.7,3 13,4.3 13,6 C13,7.7 11.7,9 10,9 C8.3,9 7,7.7 7,6 C7,4.3 8.3,3 10,3 L10,3 Z M10,17.2 C7.5,17.2 5.3,15.9 4,14 C4,12 8,10.9 10,10.9 C12,10.9 16,12 16,14 C14.7,15.9 12.5,17.2 10,17.2 L10,17.2 Z"
+													id="Shape" />
+											</g>
+										</g>
+									</g>
+								</svg>
+							</span>
+							<span class="v-text">My Account</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</footer>
 	</body>
 </html>
