--- a/index.html
+++ b/index.html
@@ -71,13 +71,20 @@
 						</div>
 					</div>
 					<div class="v-form-input position-relative">
-						<input type="text" class="form-control" placeholder="Search by Artist, Event or Venue" />
+						<input type="search" class="form-control" placeholder="Search by Artist, Event or Venue" />
 						<span class="v-icon v-icon-right">
 							<svg viewBox="0 0 23 24" width="1.5em" height="1.5em" aria-hidden="true" focusable="false">
 								<path
 									d="M3.78 4.78 1.62 10l2.16 5.22L9 17.38l5.22-2.16L16.38 10l-2.16-5.22L9 2.62zM9 1l6.36 2.64L18 10l-2.33 5.61 6.11 6.11-1.06 1.06-6.1-6.1L9 19l-6.36-2.64L0 10l2.64-6.36z"></path>
 							</svg>
 						</span>
+					</div>
+					<div class="pt-3">
+						<ul class="v-tags-container d-flex flex-nowrap column-gap-3 overflow-auto">
+							<li class="v-each-tag">Concerts</li>
+							<li class="v-each-tag">Sports</li>
+							<li class="v-each-tag">Art, Theater & Comedy</li>
+						</ul>
 					</div>
 				</div>
 			</div>
