--- a/review-tickets.html
+++ b/review-tickets.html
@@ -107,7 +107,7 @@
 															<div class="v-buttons-container d-flex align-items-center column-gap-3 text-center justify-content-evenly">
 																<button type="button" class="text-capitalize v-bar-code">View Bardcode</button>
 																<button type="button" data-bs-toggle="offcanvas" data-bs-target="#ticketDetails" class="text-capitalize">
-																	<<<<<<< HEAD ======= Ticket details
+																	Ticket details
 																</button>
 															</div>
 															<figure class="v-footer-image">
